# refine

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.adoc  README.html  README.md  TODO.adoc  TODO.md  check.bat  copy.bat  lint.sh  refine.pro  sonar-project.properties  translate.bat
cfgs/: test_settings.ini  truck_front.cfg
config/: modes.json  project.ref  数据.csv  配置.csv
doc/: Makefile  make.bat  refine.adoc  匹配软件设计说明书.md
doc/source/: chapter-1.rst  chapter-2.rst  chapter-3.rst  conf.py  index.rst
lang/: en.qm  en.ts  zh.qm  zh.ts  zh_hans.ts  说明.txt
lib/: CMakeLists.txt
log/: log.txt
proto/configs/: OperateModes.json  cfg.csv  cfg.txt
proto/gui/: about.bak  about.dwg  about.kra  about.kra~  refine.epgz  refine.rp
release/: on.bat
res/: icons.qrc  main.qrc  qss.qrc  refine.rc  text.qrc  trans.qrc  ui.qrc
res/fonts/: mark.txt
res/icons/: can.psd  connect.ai  connect.psd  disconnect.psd  display.psd  exit.psd  export.psd  import.psd  open.psd  pause.psd  resume.psd  save.psd  search.psd  start.psd  stop.psd  timer.psd  zoom+.psd  zoom-.psd
res/qss/: scrollbar.css
res/raw/: update.ai  白.ai  红.ai  蓝.ai  蓝1.ai
res/raw/icons/: config.psd  display.psd  exit.psd  export.psd  import.psd  open.psd  save.psd  search.psd  settings.psd  timer.psd  zoom+.psd  zoom-.psd
res/test/: cfg.txt
res/text/: changelog.html  readme.html
snippets/: CMakeLists.txt  send_mail.cpp
src/core/: Abstract.cpp  Abstract.h  Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  Can.cpp  Can.h  Can.hpp  CanBuffer.cpp  CanBuffer.h  CanConfig.cpp  CanConfig.h  CanDefines.cpp  CanDefines.hpp  Collect.cpp  Collect.h  Collect.hpp  Combine.cpp  Combine.hpp  Communicate.cpp  Communicate.hpp  Constant.cpp  Constant.h  ControlCan.h  Criteria.cpp  Criteria.h  Csv.cpp  Csv.h  Csv.hpp  Curve.cpp  Curve.h  Curve.hpp  CurveConfig.cpp  CurveConfig.h  Define.h  Despatch.cpp  Despatch.h  Despatch.hpp  Dump.cpp  (+86 more)
src/del/: ByteInput.cpp  ByteInput.hpp  ByteRangeFrame.cpp  ByteRangeFrame.hpp  ColorInput.cpp  ColorInput.hpp  ComboInput.cpp  ComboInput.hpp  RangeWidget.cpp  RangeWidget.hpp  SpecInput.cpp  SpecInput.hpp  SpinInput.cpp  SpinInput.hpp
src/gui/: About.cpp  About.h  About.hpp  AccInput.cpp  AccInput.hpp  BaudRate.cpp  BaudRate.hpp  Block.cpp  Block.hpp  CMakeLists.txt  CanConfig.cpp  CanConfig.hpp  CanMessage.cpp  CanMessage.hpp  CanMessageView.cpp  CanMessageView.hpp  ChangeLog.cpp  ChangeLog.hpp  ColorPicker.cpp  ColorPicker.hpp  Command.cpp  Command.hpp  CommandBox.cpp  CommandBox.hpp  CommandPanel.cpp  CommandPanel.hpp  Commandbox.cpp  Commandbox.hpp  Curve.cpp  Curve.h  CurveBox.cpp  CurveBox.hpp  CurveDialog.cpp  CurveDialog.h  CurveEditor.cpp  CurveEditor.hpp  CurveFilter.cpp  CurveFilter.hpp  CurvePanel.cpp  CurvePanel.hpp  (+91 more)
src/mod/: CompleteModel.cpp  CompleteModel.hpp  CurveModel.cpp  CurveModel.hpp  InformationModel.cpp  InformationModel.hpp  TribeCompleteModel.cpp  TribeCompleteModel.hpp  TribeModel.cpp  TribeModel.hpp  TribeSortModel.cpp  TribeSortModel.hpp
src/old/: CollectOld.cpp  CollectOld.hpp  TransformOld.cpp
src/old/test/: my_head.cpp  my_head.h  test_can.cpp  test_delete.h  test_filter.cpp  test_gl.cpp  test_json.cpp  test_refine.cpp  test_release.cpp  test_right.cpp  test_slot.cpp  test_sql.cpp
src/pdf/: Result.cpp  Result.hpp
src/proj/: OperationModes.cpp  OperationModes.hpp  Project.cpp  Project.hpp
src/tcu/: Debug.c  Debug.h
src/test/: CMakeLists.txt  MRange.h  MyOpenGLWidget.cpp  MyOpenGLWidget.hpp  TestThread.h  frame_viewer_main.cpp  main.cpp  my_head.h  my_right.cpp  my_right.h  test_bit.cpp  test_buffer.cpp  test_can.cpp  test_collect.cpp  test_config.cpp  test_constructure.cpp  test_delete.cpp  test_delete.h  test_file.cpp  test_gl.cpp  test_json.cpp  test_list.cpp  test_nas.cpp  test_pdf.cpp  test_printer.cpp  test_ref.cpp  test_refine.cpp  test_release.cpp  test_right.cpp  test_scope.cpp  test_setting.cpp  test_sqlite.cpp  test_str.cpp  test_thread.cpp  test_transmit.cpp  test_unzip.cpp  test_username.cpp  test_vector.cpp  test_window.cpp  test_yaml.cpp  (+1 more)
src/tool/: CMakeLists.txt  SendDialog.cpp  SendDialog.h  SendMain.cpp
