set(INSTALL_DIR ${PROJECT_SOURCE_DIR}/release)
if(CMAKE_BUILD_TYPE MATCHES Release)
    message("CAN DLLs will be installed")
    install(FILES ControlCAN.dll DESTINATION ${INSTALL_DIR})
    install(DIRECTORY kerneldlls DESTINATION ${INSTALL_DIR})
else(CMAKE_BUILD_TYPE MATCHES Release)
    message("in debug mode")
endif(CMAKE_BUILD_TYPE MATCHES Release)